# kaggle-template

./: .dockerignore  .env.sample  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.kaggle/: kaggle_sample.json
exp/: dataset-metadata.json
exp/001/: run.py
exp/001/config/: config.yaml
exp/001/config/dir/: kaggle.yaml  local.yaml
src/: download_dataset.py  push_deps.py  push_exp.py  push_exp.sh  push_sub.py  push_sub.sh  settings.py
sub/: eedi-sub.ipynb  kernel-metadata.json  sub.ipynb
