[project]
name = "kaggle-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nbformat>=5.10.4",
]

[project.optional-dependencies]
# 開発環境に必要な依存関係を指定
dev = [
    "ruff",
]

# kaggle notebook で動かすために追加で必要なパッケージ
kaggle = [
    "pydantic-settings>=2.13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"

[tool.ruff.lint]

[tool.ruff.lint.isort]

[tool.mypy]
ignore_missing_imports = true
